# ci-cd-demo

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: math_utils.cpp  math_utils.hpp
tests/: test_math.cpp
